istio-mpol/add-sidecar-injection-namespace/.chainsaw-test/chainsaw-step-02-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: istio-test-en-ns
