istio-mpol/add-sidecar-injection-namespace/.chainsaw-test/chainsaw-step-02-apply-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: disabled
  name: istio-test-dis-ns
