istio-mpol/add-sidecar-injection-namespace/.chainsaw-test/chainsaw-step-02-apply-4.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    foo: bar
  name: istio-test-alt-ns
