istio-mpol/add-sidecar-injection-namespace/.chainsaw-test/exception-sibling.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-sidecar-exception-sibling
  labels: {}
