istio-mpol/add-sidecar-injection-namespace/.chainsaw-test/patched-ns-alt.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    foo: bar
    istio-injection: enabled
  name: istio-test-alt-ns
