istio-mpol/add-sidecar-injection-namespace/.chainsaw-test/patched-ns-disabled.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: istio-test-dis-ns
