istio-mpol/add-sidecar-injection-namespace/.chainsaw-test/exception-assert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-sidecar-exception-ns
  labels: {}
