istio-mpol/add-sidecar-injection-namespace/.chainsaw-test/exception-expected.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-sidecar-exception-ns
  labels: {}
(!contains(keys(metadata.labels || `{}`), 'istio-injection')): true
