istio-mpol/add-sidecar-injection-namespace/.chainsaw-test/exception-sibling-expected.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-sidecar-exception-sibling
  labels:
    istio-injection: enabled
